# backend/services/paste/docs/swagger.json
@@ -7,42 +7,8 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/",
+    "basePath": "/api/v1",
     "paths": {
-        "/login": {
-            "post": {
-                "description": "用户登录接口",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "用户登录",
-                "parameters": [
-                    {
-                        "description": "登录信息",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.LoginRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.LoginResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/pastes": {
             "post": {
                 "consumes": [
@@ -104,7 +70,41 @@
                 }
             }
         },
-        "/register": {
+        "/users/login": {
+            "post": {
+                "description": "用户登录接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "description": "登录信息",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.LoginResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/register": {
             "post": {
                 "description": "用户注册接口",
                 "consumes": [
@@ -144,17 +144,13 @@
             "type": "object",
             "required": [
                 "content",
-                "language",
-                "short_link"
+                "language"
             ],
             "properties": {
                 "content": {
                     "type": "string"
                 },
                 "language": {
-                    "type": "string"
-                },
-                "short_link": {
                     "type": "string"
                 }
             }
@@ -170,6 +166,7 @@
                     "type": "string"
                 },
                 "username": {
+                    "description": "登录时不需要太严格，只要求必填即可",
                     "type": "string"
                 }
             }
@@ -211,18 +208,25 @@
         "model.RegisterRequest": {
             "type": "object",
             "required": [
+                "email",
                 "password",
                 "username"
             ],
             "properties": {
                 "email": {
+                    "description": "Email: 邮箱",
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
+                    "description": "Password: 密码",
+                    "type": "string",
+                    "minLength": 8
                 },
                 "username": {
-                    "type": "string"
+                    "description": "Username: 用户名\nrequired: 必填字段\nmin=3: 最少3个字符\nmax=20: 最多20个字符\nalphanum: 只能包含字母和数字（不能有特殊字符、空格）",
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 3
                 }
             }
         },
